@@ -1,3 +1,9 @@
+Changes new in version 0.10.1, 31 January, 2001
+===============================================
+
+- Minor fixes to build and RPM spec file.
+
+
 Changes new in version 0.10.0, 21 January, 2001
 ===============================================
 
